# Revision history for Perl extension Encode.
#
# $Id: Changes,v 2.44 2011/08/09 07:49:44 dankogai Exp dankogai $
#
$Revision: 2.44 $ $Date: 2011/08/09 07:49:44 $
! Unicode/Unicode.xs
  t/Unicode.t
  Bug fixes in Unicode.xs by chansen
  https://github.com/dankogai/p5-encode/pull/5

2.44 2011/08/09 07:49:44
! Unicode/Unicode.xs
  Addressed the following:
    Date: Fri, 22 Jul 2011 13:58:43 +0200
    From: Robert Zacek <zacek@avast.com>
    To: perl5-security-report@perl.org
    Subject: Unicode.xs!decode_xs n-byte heap-overflow
! Encode.pm encoding.pm
! lib/Encode/Alias.pm lib/Encode/Encoder.pm lib/Encode/Guess.pm
  Applied: RT#69735: patch for use constant DEBUG =>
  https://rt.cpan.org/Ticket/Update.html?id=69735

2.43 2011/05/21 23:14:43
! lib/Encode/Alias.pm
  Addressed RT#68361: Encode::Bytes x-mac-... aliases missing
  https://rt.cpan.org/Ticket/Display.html?id=68361
! Encode.pm
  Applied the 0001-Fix-typo-in-pod.patch
  https://rt.cpan.org/Ticket/Update.html?id=64381
  Addressed RT#65796 Deep recursion error finding invalid charset
  https://rt.cpan.org/Ticket/Update.html?id=65796
  Applied a jumbo doc patch by Tom Christiansen
  Message-Id: <14795.1304618434@chthon>

2.42 2010/12/31 22:48:48
! Encode.xs
! Unicode/Unicode.xs
  Applied: RT#64371: Update for 5.14 API changes
  http://rt.cpan.org/Ticket/Display.html?id=64371

2.41 2010/12/23 11:05:58
! lib/Encode/MIME/Header.pm
  Applied: RT#63387 encode of MIME-Header inserts too much whitespace
  http://rt.cpan.org/Ticket/Display.html?id=63387
! t/Aliases.t lib/Encode/Alias.pm
  Applied: RT#63286: Various Encode::Alias improvements
  http://rt.cpan.org/Ticket/Display.html?id=63286

2.40 2010/09/18 18:39:51
! Encode.pm Encode.xs
+ t/utf8ref.t
  Addressed: RT#59981: find_encoding("UTF-8")->encode crashes
    decode_utf8() is now a little faster, too.
  http://rt.cpan.org/Ticket/Display.html?id=59981
  http://rt.cpan.org/Ticket/Display.html?id=58541
! lib/Encode/Unicode/UTF7.pm