@@ -7,6 +7,9 @@ $Revision: 2.44 $ $Date: 2011/08/09 07:49:44 $
   t/Unicode.t
   Bug fixes in Unicode.xs by chansen
   https://github.com/dankogai/p5-encode/pull/5
+! Encode.pm
+  various POD improvements by daxim
+  https://github.com/dankogai/p5-encode/pull/4
 
 2.44 2011/08/09 07:49:44
 ! Unicode/Unicode.xs
